// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline Basic rundown 1`] = `
Array [
  Object {
    "_id": "mockStudio10_randomId11002_status",
    "classes": Array [
      "rundown_active",
    ],
    "content": Object {
      "deviceType": 0,
    },
    "enable": Object {
      "while": 1,
    },
    "id": "randomId11002_status",
    "layer": "rundown_status",
    "objectType": "rundown",
    "rundownId": "randomId11002",
    "studioId": "mockStudio10",
  },
  Object {
    "_id": "mockStudio10_part_group_randomId11002_part0_0",
    "children": Array [],
    "content": Object {
      "deviceType": 0,
      "type": "group",
    },
    "enable": Object {
      "start": "now",
    },
    "id": "part_group_randomId11002_part0_0",
    "isGroup": true,
    "isPartGroup": true,
    "layer": "",
    "objectType": "rundown",
    "priority": 5,
    "rundownId": "randomId11002",
    "studioId": "mockStudio10",
  },
  Object {
    "_id": "mockStudio10_part_group_firstobject_randomId11002_part0_0",
    "classes": Array [],
    "content": Object {
      "callBack": "partPlaybackStarted",
      "callBackData": Object {
        "partId": "randomId11002_part0_0",
        "rundownId": "randomId11002",
      },
      "callBackStopped": "partPlaybackStopped",
      "deviceType": 0,
      "type": "callback",
    },
    "enable": Object {
      "start": 0,
    },
    "id": "part_group_firstobject_randomId11002_part0_0",
    "inGroup": "part_group_randomId11002_part0_0",
    "layer": "group_first_object",
    "objectType": "rundown",
    "rundownId": "randomId11002",
    "studioId": "mockStudio10",
  },
  Object {
    "_id": "mockStudio10_statObj",
    "content": Object {
      "deviceType": 0,
      "objCount": 3,
      "type": "nothing",
    },
    "enable": Object {
      "start": 0,
    },
    "id": "statObj",
    "layer": "__stat",
    "objectType": "stat",
    "studioId": "mockStudio10",
  },
]
`;

exports[`Timeline Basic rundown 2`] = `
Array [
  Object {
    "_id": "mockStudio10_randomId11002_status",
    "classes": Array [
      "rundown_active",
    ],
    "content": Object {
      "deviceType": 0,
    },
    "enable": Object {
      "while": 1,
    },
    "id": "randomId11002_status",
    "layer": "rundown_status",
    "objectType": "rundown",
    "rundownId": "randomId11002",
    "studioId": "mockStudio10",
  },
  Object {
    "_id": "mockStudio10_part_group_firstobject_randomId11002_part0_0",
    "classes": Array [],
    "content": Object {
      "callBack": "partPlaybackStarted",
      "callBackData": Object {
        "partId": "randomId11002_part0_0",
        "rundownId": "randomId11002",
      },
      "callBackStopped": "partPlaybackStopped",
      "deviceType": 0,
      "type": "callback",
    },
    "enable": Object {
      "start": 0,
    },
    "id": "part_group_firstobject_randomId11002_part0_0",
    "inGroup": "part_group_randomId11002_part0_0",
    "layer": "group_first_object",
    "objectType": "rundown",
    "rundownId": "randomId11002",
    "studioId": "mockStudio10",
  },
  Object {
    "_id": "mockStudio10_part_group_randomId11002_part0_0",
    "children": Array [],
    "content": Object {
      "deviceType": 0,
      "type": "group",
    },
    "enable": Object {
      "setFromNow": true,
      "start": 100000,
    },
    "id": "part_group_randomId11002_part0_0",
    "isGroup": true,
    "isPartGroup": true,
    "layer": "",
    "objectType": "rundown",
    "priority": 5,
    "rundownId": "randomId11002",
    "studioId": "mockStudio10",
  },
  Object {
    "_id": "mockStudio10_statObj",
    "content": Object {
      "deviceType": 0,
      "objCount": 3,
      "type": "nothing",
    },
    "enable": Object {
      "start": 0,
    },
    "id": "statObj",
    "layer": "__stat",
    "objectType": "stat",
    "studioId": "mockStudio10",
  },
]
`;

exports[`Timeline Basic rundown 3`] = `
Array [
  Object {
    "_id": "mockStudio10_statObj",
    "content": Object {
      "deviceType": 0,
      "objCount": 1,
      "type": "nothing",
    },
    "enable": Object {
      "start": 0,
    },
    "id": "statObj",
    "layer": "__stat",
    "objectType": "stat",
    "studioId": "mockStudio10",
  },
  Object {
    "_id": "mockStudio10_baseline_version",
    "content": Object {
      "deviceType": 0,
    },
    "enable": Object {
      "start": 0,
    },
    "id": "baseline_version",
    "layer": "baseline_version",
    "metadata": Object {
      "versions": Object {
        "blueprintId": "mockBlueprint6",
        "blueprintVersion": "0.0.0",
        "core": "0.0.0-test",
        "studio": "asdf",
      },
    },
    "objectType": "rundown",
    "rundownId": "",
    "studioId": "mockStudio10",
  },
]
`;
